tests/errors/scope_undefined_var_err/scope_undefined_var_err.fs
module rec scope_undefined_var_err.Program

// Use of undefined var name is error.

let main _ =
  assert (undefinedVar = 0)
  assert false
  0
